# NUTC

./: .clang-format  .clang-tidy  .dockerignore  .gitignore  .vercelignore  ACTUAL-BUILDING.md  BUILDING.md  CMakeLists.txt  CMakePresets.json  Dockerfile  HACKING.md  README.md  Taskfile.yml  conanfile.py  database.rules.json  firebase.json  go.work  go.work.sum  package-lock.json  package.json  tailwind.config.js  template.py
exchange/: .clang-format  .clang-tidy  .clangd  .codespellrc  .git-blame-ignore-revs  .gitignore  BUILDING.md  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.json  Dockerfile  Doxyfile  README.md  Taskfile.yml  conanfile.py  conanfile_no_ncurses.py  config.yml  docker-compose.yml  log_a0  output.txt  shell.nix  template.cpp  template.hpp  template.py
exchange/.github/scripts/: conan-profile.sh
exchange/benchmark/: CMakeLists.txt
exchange/benchmark/src/: generic_trader.cpp  level_quantity_tracker.cpp  orderbook.cpp
exchange/benchmark/src/helpers/: benchmark_trader.hpp
exchange/cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake  variables.cmake
exchange/docker/: prometheus.yml
exchange/docker/dev/: docker-compose.yml
exchange/docker/dev/grafana_data/: grafana.db
exchange/docker/grafana_data/: grafana.db
exchange/docker/linter/: Dockerfile  LinterDockerfile
exchange/docker/sandbox/: Dockerfile  prometheus.yml
exchange/docker/sandbox/grafana_data/: grafana.db
exchange/docs/: BUILDING.md  Doxyfile.in
exchange/scripts/: check_rabbitmq.sh  docker-start.sh
exchange/src/: config.h  lib.hpp  logging.cpp  logging.hpp  main.cpp
exchange/src/algos/: algo_manager.hpp  management_interface.hpp
exchange/src/algos/dev_mode/: dev_mode.cpp  dev_mode.hpp
exchange/src/algos/normal_mode/: normal_mode.cpp  normal_mode.hpp
exchange/src/algos/sandbox_mode/: sandbox_mode.cpp  sandbox_mode.hpp
exchange/src/client_manager/: client_manager.cpp  client_manager.hpp  manager.cpp  manager.hpp
exchange/src/common/: messages_exchange_to_wrapper.hpp  messages_wrapper_to_exchange.hpp  resource_limits.hpp  util.cpp  util.hpp
exchange/src/common/compilation/: compile_cpp.cpp  compile_cpp.hpp
exchange/src/common/config/: config.hpp
exchange/src/common/fetching/: fetching.cpp  fetching.hpp
exchange/src/common/file_operations/: file_operations.cpp  file_operations.hpp
exchange/src/common/firebase/: firebase.cpp  firebase.hpp
exchange/src/common/logging/: logging.cpp  logging.hpp
exchange/src/common/types/: algorithm.hpp  decimal.cpp  decimal.hpp  position.hpp  ticker.hpp  visitor.hpp
exchange/src/curl/: curl.cpp  curl.hpp
exchange/src/data/: actions.hpp  streaming.cpp  streaming.hpp
exchange/src/dev_mode/: dev_mode.cpp  dev_mode.hpp
exchange/src/exchange/: config.h  exchange_state.hpp  logging.cpp  logging.hpp  main.cpp
exchange/src/exchange/algos/: algo_manager.cpp  algo_manager.hpp
exchange/src/exchange/bot_framework/: bot_container.cpp  bot_container.hpp  bot_container_mapper.hpp
exchange/src/exchange/bots/: bot_container.cpp  bot_container.hpp  market_maker.hpp  (+3 more)
exchange/src/linter/: common.hpp  config.h  main.cpp
exchange/src/local_algos/: dev_mode.cpp  dev_mode.hpp  file_management.cpp  file_management.hpp  sandbox.cpp  sandbox.hpp
exchange/src/logger/: logger.cpp  logger.hpp
exchange/src/matching/: engine.cpp  engine.hpp  engine_manager.cpp  engine_manager.hpp  manager.cpp
exchange/src/process_spawning/: spawning.cpp  spawning.hpp
exchange/src/rabbitmq/: rabbitmq.cpp  rabbitmq.hpp
exchange/src/randomness/: brownian.cpp  brownian.hpp
exchange/src/shared/: messages.hpp  messages_exchange_to_wrapper.hpp  messages_wrapper_to_exchange.hpp  ticker.cpp  ticker.hpp  util.cpp  util.hpp
exchange/src/tick_manager/: tick_observer.hpp
exchange/src/util/: messages.hpp
exchange/src/utils/: messages.hpp
exchange/src/wrapper/: common.hpp  config.h  logging.cpp  logging.hpp  main.cpp  rate_limiter.cpp  rate_limiter.hpp  resource_limits.hpp
exchange/test/: CMakeLists.txt
exchange/test/algos/: buy_tsla_at_100.py
exchange/test/src/: basic_matching.cpp  config.h  config.hpp  invalid_orders.cpp  logging_orders.cpp  many_orders.cpp
exchange/test/test_algos/: buy_market_order_1000.py  buy_tsla_at_100.py  buy_tsla_on_account.py  buy_tsla_on_trade.py  cancel_limit_order.py  confirm_1000.py  sell_market_order_1.py  sell_tsla_on_account.py
linter/: .codespellrc  .dockerignore  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  README.md  Taskfile.yml  conanfile.py
linter/cmake/: dev-mode.cmake  install-rules.cmake  lint.cmake  variables.cmake
linter/resources/: cpp20
linter/src/: common.hpp  config.h.in  lint_result.hpp  logging.hpp  main.cpp
linter/src/crow/: crow.cpp  crow.hpp
linter/src/fetching/: fetching.cpp  fetching.hpp
linter/src/firebase/: fetching.cpp  fetching.hpp  firebase.hpp
linter/src/lint/: lint.cpp  lint.hpp
linter/src/mock_api/: mock_api.cpp  mock_api.hpp
linter/src/pywrapper/: runtime.cpp  runtime.hpp
linter/src/spawner/: main.cpp
linter/src/spawning/: spawning.cpp  spawning.hpp
linter/src/thread_safe_queue/: tsq.cpp  tsq.hpp
linter/test/: CMakeLists.txt
linter/test/src/: NUTC-client_test.cpp  NUTC-linter_test.cpp
test/: CMakeLists.txt
test/source/: NUTC-client_test.cpp
test/src/: NUTC-client_test.cpp  NUTC24_test.cpp  basic_matching.cpp  invalid_orders.cpp  many_orders.cpp
test/src/util/: macros.cpp  macros.hpp
webserver/: Cargo.toml  Dockerfile  WebserverDockerfile
webserver/src/: main.rs
wrapper/: CMakeLists.txt  CMakePresets.json  README.md  Taskfile.yml  conanfile.py
wrapper/cmake/: dev-mode.cmake  install-rules.cmake  variables.cmake
wrapper/src/: config.h.in  logging.cpp  logging.hpp  main.cpp
wrapper/src/dev_mode/: dev_mode.cpp  dev_mode.hpp
wrapper/src/firebase/: firebase.cpp  firebase.hpp
wrapper/src/pywrapper/: pywrapper.cpp  pywrapper.hpp  rate_limiter.cpp
wrapper/src/rabbitmq/: rabbitmq.cpp  rabbitmq.hpp
wrapper/src/util/: messages.hpp
wrapper/test/: CMakeLists.txt
wrapper/test/src/: NUTC-client_test.cpp
(+776 files in other folders)
