[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.5.1"
tracing-actix-web = "0.7.10"
tracing-subscriber = "0.3.18"
tracing = "0.1.37"
actix-cors = "0.7.0"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.199", features = ["derive"] }
postgres = "0.19.8"
tokio = "1.40.0"
tokio-postgres = "0.7.11"
serde_json = "1.0.128"
